Add YMAP entity and grass support, entity flags UI, and szio_copy module
Added complete ymap entity support
Fixed ymap extents calculation (same results with cw)
Added ymap grass painting brush
Added ymap grass color painting brush
Added ymap lod/slod support (Parent linking with automatic parentIndex, numChildren calculation and entity ordering)
Fixed UVs disappearing when exporting yft with cloth alpha and cloth cutout shaders.

--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,7 +1,7 @@
 schema_version = "1.0.0"
 
 id = "sollumz_dev"
-version = "2.8.0-dev+$Format:%h$"
+version = "2.8.0-dev+e1f6751"
 name = "Sollumz (Development)"
 tagline = "Grand Theft Auto V modding suite for Blender"
 maintainer = "alexguirre <alexguirre.aa@gmail.com>"
